Set line-height for titles; avoid text overlap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,7 +69,11 @@ a {
 }
 
 .menu, .article-meta, footer { text-align: center; }
-.title { font-size: 1.1em; }
+.title {
+  font-size: 1.1em;
+  line-height: 1.1;
+}
+
 footer a { text-decoration: none; }
 hr {
   border-style: {{ $hrBorderStyle }};
